--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "swiper": "^12.1.0",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
   },
